have padding correct for text and stars, minus alignment for MP

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -494,6 +494,7 @@ title has */
   margin: 30px 0px 30px 30px;
   font-size: 20px;
   display: block;
+  color: black;
 }
 
 /* have star be next to title */
@@ -510,16 +511,12 @@ i {
 affected by the css above */
 .mp-hotel-cards i {
   margin-left: 0px;
-  display: block;
+  display: flex;
+  flex-direction: row;
+  font-size: 5px;
 }
 
-/* .mp-hotel-cards { */
-/* display: grid; */
-/* grid-template-rows: 250px 1fr; */
-/* grid-row-gap: -100px; */
-/* } */
 /* remove underneath hyperlink for each */
-
 .mp-hotel-cards a {
   text-decoration: none;
 }
@@ -527,19 +524,22 @@ affected by the css above */
 .mp-hotel-cards h2 {
   font-size: 16px;
   margin: 0px;
-  padding: 5px;
+  padding: 15px 20px 15px 15px;
 }
 
 .mp-hotel-cards p {
   font-size: 12px;
   margin: 0px;
   padding: 5px;
+  color: black;
+  padding: 15px 20px 15px 15px;
 }
 
 .mp-hotel-cards i {
   display: flex;
   flex-direction: row;
   color: blue;
+  padding-left: 15px; 
 }
 
 .mp-hotel-cards img {
